Fixing weird spacing on closed items list

--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -10,6 +10,10 @@
   display: flex;
   align-items: center;
 
+  &.first {
+    margin-top: 0;
+  }
+
   .amount {
     width: 1.5rem;
     font-size: large;
